# fractal-explorer

./: .gitignore  FRACTAL_GALLERY.md  LICENSE  README.md  fractal_explorer.py  pyproject.toml
.github/workflows/: test.yml
docs/: DOD_EVIDENCE.md
docs/superpowers/plans/: 2026-05-06-v0.6.0-plan.md  2026-05-06-v0.9.0-plan.md
scripts/: dashboard.py
skills/test-engineering/: SKILL.md
src/: fractal_3d.py  fractal_explorer_v2.py  fractal_explorer_v3.py  fractal_kleinian.py  fractal_newton.py
tests/: conftest.py  test_3d_integration.py  test_bookmark_persistence.py  test_crosshair.py  test_export.py  test_fps_overlay.py  test_gif_capture.py  test_hue_cycling.py  test_info_panel.py  test_integration.py  test_interior_colouring.py  test_iter_control.py  test_julia_seed_picker.py  test_kleinian.py  test_mouse_zoom_pan.py  test_newton.py  test_orbit_trap.py  test_palette_system.py  test_param_tweaking.py  test_perf_numba.py  test_progressive_quality.py  test_properties.py  test_properties_v2.py  test_regression.py  test_screensaver.py  test_smooth_colouring.py  test_smooth_zoom.py  test_unit.py  test_zoom_stack.py
tests/_baselines/: BinaryTreeLS_f300.txt  BurningShip_f30.txt  FlowerOfLife_f1.txt  GoldenSpiralSG_f1.txt  GosperCurve_f300.txt  HeighwayDragonIFS_f20.txt  HilbertCurve_f300.txt  Julia1_f30.txt  Julia2_f30.txt  KochCurve_f100.txt  KochCurve_f30.txt  KochSnowflake_f100.txt  KochSnowflake_f30.txt  LevyCIFS_f20.txt  Mandelbrot_f30.txt  MetatronCube_f1.txt  Multibrot3_f30.txt  Multibrot4_f30.txt  PenroseTiling_f300.txt  PlantOne_f300.txt  PlantTwo_f300.txt  SeedOfLife_f1.txt  SierpinskiArrowhead_f300.txt  SierpinskiTriangleIFS_f20.txt  SriYantra_f1.txt  TSquareFractal_f20.txt  TreeOfLife_f1.txt  Tricorn_f30.txt  VesicaPiscis_f1.txt  VicsekFractal_f20.txt
tests/_mutation_target/: check_kill_rate.py  mutation_target.py  setup.cfg  test_defaults_and_properties.py  test_mutation_target.py
