[project]
name = "fractal-explorer"
version = "0.3.0"
description = "Interactive pygame explorer for 57+ fractal forms across 6 categories"
authors = [{ name = "James Hardy", email = "james.hardy1124@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "pygame>=2.5,<3.0",
    "numpy>=1.26,<3.0",
    "numba>=0.59,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<10.0",
    "pytest-cov>=5.0,<8.0",
    "hypothesis>=6.150,<7.0",
    "syrupy>=4.0,<6.0",
    "mutmut>=3.0,<4.0",
    "ruff>=0.11,<1.0",
    "mypy>=1.10,<2.0",
    "rich>=13.0,<15.0",
    "hatch>=1.13,<2.0",
]

[project.scripts]
fractal-explorer = "fractal_explorer_v2:main"

[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fractal_explorer_v2.py"]
include = ["fractal_3d.py", "fractal_newton.py", "fractal_kleinian.py", "src/"]

# ── ruff ─────────────────────────────────────────────────────────────────────

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = ["tests/_baselines", "artifacts"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = [
    "E501",   # line length handled by formatter
    "E701",   # one-liner colon — deliberate compact style in math-heavy engine
    "E702",   # one-liner semicolon — deliberate compact style in math-heavy engine
    "N802",   # DE = Distance Estimator (math notation); F = fractal category — same reason as N806/N803
    "N806",   # allow Title-case locals (math symbols A, B, C in attractor formulas)
    "N803",   # allow Title-case args same reason
]

# ── mypy ─────────────────────────────────────────────────────────────────────

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true

# ── pytest ───────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
filterwarnings = [
    "ignore::DeprecationWarning:pygame.*",
]
markers = [
    "slow: tests that take >5 seconds",
    "stochastic: tests that use seeded RNG (don't run in parallel)",
]

# ── coverage ─────────────────────────────────────────────────────────────────

[tool.coverage.run]
source = ["fractal_explorer_v2"]
omit = ["tests/*", "*/_baselines/*"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

# ── mutmut ───────────────────────────────────────────────────────────────────

[tool.mutmut]
paths_to_mutate = ["tests/_mutation_target/mutation_target.py"]
runner = "python -m pytest -x -q tests/_mutation_target/test_mutation_target.py tests/_mutation_target/test_defaults_and_properties.py"
tests_dir = "tests/_mutation_target"
